--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World</h1>
+<p>This is where we will be hosting out Podcast.</p>
+</body>
+</html>
